--- a/index.html
+++ b/index.html
@@ -3,137 +3,63 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-        <style type="text/css">
-            html {
-                display: table;
-                margin: auto;
-            }
-            body {
-                transform: translateX(0px);
-                background-color: #111111;
-                overflow-x: hidden;
-            }
-            .menu-buttons {
-                display: flex;
-                justify-content: center;
-                flex-direction: row;
-
-                animation: reset 1500ms forwards;
-                transform: translateY(100px);
-                filter: drop-shadow(5px 100px 5px #000);
-            }
-
-            button {
-                font-size: 24px;
-                width: 150px;
-                height: 50px;
-                margin: 5px;
-                background-color: #272727;
-                border: 5px solid #FBE6C3;
-                color: #FBE6C3;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                transition: box-shadow 250ms;
-            }
-
-            button:hover {
-                box-shadow: 0px 0px 10px;
-            }
-
-            .panel {
-                text-align: center;
-                display: none;
-            }
-
-            .text {
-                display: none;
-            }
-            @media (width < 500px) {
-                button{
-                    visibility: hidden;
-                }
-                button:after{
-                    visibility: visible;
-                    content: "SCREEN TOO SMALL!!!";
-                    background-color: red;
-                }
-            }
-
-            .center {
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                color: #FBE6C3;
-
-                animation: show 2s ease-in forwards;
-                opacity: 0;
-            }
-
-            .logo {
-                animation: reset 1500ms forwards;
-                filter: drop-shadow(5px 250px 5px #000);
-                transform: translateY(-400px);
-            }
-
-            @keyframes reset { 100% {
-                filter: drop-shadow(5px 5px 5px #000);
-                transform: translateY(0px);
-            } }
-
-            @keyframes about-me { 100% {
-                transform: translateX(1920px);
-            } }
-            @keyframes show { 100% { opacity: 1; } }
-        </style>
-        <script type="text/javascript">
-            let panelState = "Closed";
-            function AboutMe(){
-                if (panelState == "AboutMe") return;
-                panelState = "AboutMe";
-                
-                document.getElementById("text").style.display = "block";
-                document.getElementById("test").innerHTML = "About Me";
-                document.getElementById("panel").style.display = "block";
-                document.getElementById("image").src = "Resume.jpg";
-            }
-            function Projects(){
-                if (panelState == "Projects") return;
-                panelState = "Projects";
-
-                document.getElementById("text").style.display = "none";
-                document.getElementById("test").innerHTML = "Projects";
-                document.getElementById("panel").style.display = "block";
-                document.getElementById("image").src = "Collage.jpg";
-            }
-        </script>
-        <title>Document</title>
+        <link rel="stylesheet" type="text/css" href="general.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="shortcut icon" type="image/png" href="assets/logo1.png">
+        <script defer src="script.js"></script>
+        <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
+        <title>Kamachi Portfolio</title>
+        
     </head>
 
     <body>
-        <div class="center" id="center">
-            <div class="logo">
-                <img src="logo.png" width="500" height="500"/>
+        <header id="header">
+            <nav role="navigation">
+                <ul class="headerButtons">
+                    <li>
+                        <a href="AboutMe();">Home</a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">Skills</a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">Projects</a>
+                    </li>
+                    <li>
+                        <a href="pages/timeline/timeline.html">Timeline</a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">Contact</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Luxen03">
+                            <img src="assets/GitHub.png" alt="logo" class="logo"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">
+                            <img src="assets/Twitter.png" alt="logo" class="logo"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/angelo.kamachi.5303">
+                            <img src="assets/Facebook.png" alt="logo" class="logo"/>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section class="shell">
+            <div class="background">
+                <model-viewer class="viewer" src="assets/LindaReachBaked.glb" shadow-intensity="1" auto-rotate></model-viewer>
             </div>
-            <div class="menu-buttons">
-                <div class="about-me">
-                    <button onclick="AboutMe();">ABOUT ME</button>
-                </div>
-                <div class="projects">
-                    <button onclick="Projects();">PROJECTS</button>
-                </div>
-            </div>
-            <h1 id="test">None Selected</h1>
-            <div class="panel" id="panel">
-                <div id="text">
-                    <br><br>
-                    <h1>Hello! My name is Angelo Justine D. Kamachi </h1>
-                    <h2>An aspiring game developer</h2><br>
-                    <br><br><br><br><br><br>
-                </div>
-                <img src="Resume.jpg" id="image"/>
-            </div>
-        </div>
+            <section class="content" id="content">
+                <h1 class="hello">Hello!</h1>
+                <h3 class="welcome">I am Kamachi</h1>
+                <p class="occupation">A full stack developer</h1>
+                <p class="desc">Mostly well versed in C# and game development. Working to graduate in <a href="https://mcl.edu.ph">Mapúa Malayan Colleges Laguna</a> as a Bachelor for Computer Science, specializing in machine learning</p>
+            </section>
+        </section>
+        <footer>Property of Angelo Justine D. Kamachi : Portfolio still under development!</footer>
     </body>
 </html>
