--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </header>
         <section class="shell">
             <div class="background">
-                <model-viewer class="viewer" src="assets/LindaReachBaked.glb" shadow-intensity="1" auto-rotate></model-viewer>
+                <model-viewer class="viewer" src="assets/LindaReachBaked.glb" shadow-intensity="1" camera-controls auto-rotate></model-viewer>
             </div>
             <section class="content" id="content">
                 <h1 class="hello">Hello!</h1>
