--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav role="navigation">
                 <ul class="headerButtons">
                     <li>
-                        <a href="AboutMe();">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="AboutMe();">Skills</a>
@@ -33,17 +33,17 @@
                     </li>
                     <li>
                         <a href="https://github.com/Luxen03">
-                            <img src="assets/GitHub.png" alt="logo" class="logo"/>
+                            <img src="assets/GitHub.png"/>
                         </a>
                     </li>
                     <li>
                         <a href="AboutMe();">
-                            <img src="assets/Twitter.png" alt="logo" class="logo"/>
+                            <img src="assets/Twitter.png"/>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/angelo.kamachi.5303">
-                            <img src="assets/Facebook.png" alt="logo" class="logo"/>
+                            <img src="assets/Facebook.png"/>
                         </a>
                     </li>
                 </ul>
@@ -51,13 +51,24 @@
         </header>
         <section class="shell">
             <div class="background">
-                <model-viewer class="viewer" src="assets/LindaReachBaked.glb" shadow-intensity="1" camera-controls auto-rotate></model-viewer>
+                <model-viewer src="assets/LindaReachBaked.glb" shadow-intensity="1" camera-controls auto-rotate></model-viewer>
             </div>
             <section class="content" id="content">
-                <h1 class="hello">Hello!</h1>
-                <h3 class="welcome">I am Kamachi</h1>
-                <p class="occupation">A full stack developer</h1>
-                <p class="desc">Mostly well versed in C# and game development. Working to graduate in <a href="https://mcl.edu.ph">Mapúa Malayan Colleges Laguna</a> as a Bachelor for Computer Science, specializing in machine learning</p>
+                    <h1 class="hello">Hello!</h1>
+                    <h3 class="welcome">I am Kamachi</h1>
+                    <p class="occupation">A full stack developer</h1>
+                    <p class="desc">Mostly well versed in C# and game development. Working to graduate in <a href="https://mcl.edu.ph">Mapúa Malayan Colleges Laguna</a> as a Bachelor for Computer Science, specializing in machine learning</p>
+            </section>
+        </section>
+        <section class="shell">
+            <div class="background">
+                <img src="assets/MCL.png"/>
+            </div>
+            <section class="content" id="content">
+                    <h1 class="hello">Lorem</h1>
+                    <h3 class="welcome">Lorem ipsum</h1>
+                    <p class="occupation">Lorem ipsum dolor sit amet</h1>
+                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget porta tortor. Aenean nec orci elementum, rhoncus odio eget, porta nunc. Sed eu dolor euismod, posuere neque sit amet, rhoncus magna. Donec ac neque sem. Morbi eleifend pellentesque velit. Maecenas viverra, metus finibus lacinia tincidunt, dolor dui maximus nisl, ac vehicula est tortor at orci. Sed vitae ex vestibulum, efficitur diam in, porta arcu. Sed semper velit eu libero tempus rhoncus. Duis nunc felis, tempus id tincidunt sit amet, vehicula ac ex. Vivamus interdum lectus at ornare tincidunt. Nam blandit mi vel ultrices efficitur. Mauris ultricies, metus eu euismod vulputate, leo libero rutrum orci, ut consectetur quam odio volutpat augue. Nam a massa felis. Vestibulum eu massa mattis, pharetra ante id, accumsan nunc.</p>
             </section>
         </section>
         <footer>Property of Angelo Justine D. Kamachi : Portfolio still under development!</footer>
