--- a/pages/timeline/timeline.html
+++ b/pages/timeline/timeline.html
@@ -3,30 +3,51 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="general.css">
-        <script defer src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../general.css">
+        <link rel="stylesheet" type="text/css" href="timeline.css">
+        <script defer src="timeline.js"></script>
     </head>
 
     <body>
         <header id="header">
-            <button class="profile" onlick="Home()">
-                <img src="assets/logo.png" class="logo"/>
-                <h1 class="name">Angelo Justine D. Kamachi</h1>
-            </button>
-            <nav class="headerButtons">
-                <ul>
-                    <li><a class="headerButton" href="AboutMe();">Skills</button>
-                <a class="headerButton" href="AboutMe();">Projects</button>
-                <a class="headerButton" href="pages/timeline/timeline.html">Timeline</button>
-                <a class="headerButton" href="AboutMe();">Contact</button>
+            <nav role="navigation">
+                <ul class="headerButtons">
+                    <li>
+                        <a href="../../index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">Skills</a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">Projects</a>
+                    </li>
+                    <li>
+                        <a href="timeline.html">Timeline</a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">Contact</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Luxen03">
+                            <img src="../../assets/GitHub.png"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="AboutMe();">
+                            <img src="../../assets/Twitter.png"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/angelo.kamachi.5303">
+                            <img src="../../assets/Facebook.png"/>
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </header>
 
         <section class="content" id="content"></section>
 
-        <footer>
-            <p>Property of Angelo Justine D. Kamachi</p>
-        </footer>
+        <footer>Property of Angelo Justine D. Kamachi : Portfolio still under development!</footer>
     </body>
 </html>
